--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,4 @@
-<IfModule mod_rewrite.c>
+Options -MultiViews
 RewriteEngine On
-RewriteBase /
-RewriteCond %{REQUEST_URI} !^/(assets/?|$)
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [L]
-</IfModule>
+RewriteRule ^ index.html [QSA,L]
